# aim_bot

./: .env  .env.example  .flake8  .gitignore  Makefile  README.md  VOICE_REPORTS_BOT_PROJECT_PLAN.md  nixpacks.toml  pyproject.toml  requirements-dev.txt  requirements.txt  КАК_ИСПОЛЬЗОВАТЬ.md
config/prompts/: validation.txt
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  QUICK_START_TELEGRAM.md  SETUP.md  VK_MAX_INTEGRATION.md
migrations/: env.py
scripts/: add_admin.py  init_db.py  migrate.py  seed_data.py
src/: __init__.py  config.py  main.py
src/ai/: __init__.py  prompts.py  transcription.py  validation.py
src/ai/providers/: __init__.py  anthropic_provider.py  local_provider.py  openai_provider.py
src/api/: __init__.py  app.py  dependencies.py
src/api/routes/: __init__.py  analytics.py  employees.py  reports.py
src/api/schemas/: __init__.py  employee.py  report.py
src/bot/: __init__.py  base_messenger.py  keyboards.py  messenger_manager.py  middlewares.py  states.py  telegram_bot.py  telegram_bot_adapter.py  unified_handlers.py
src/bot/handlers/: __init__.py  admin.py  common.py  reports.py  voice.py
src/bot/vkmax/: __init__.py  vkmax_bot.py
src/database/: __init__.py  base.py  session.py
src/database/models/: __init__.py  department.py  employee.py  permission.py  report.py  (+1 more)
src/services/: __init__.py  export_service.py  notification_service.py  report_service.py
src/utils/: __init__.py  decorators.py  logger.py  validators.py
tests/: __init__.py  conftest.py
tests/test_ai/: test_validation.py
tests/test_api/: test_routes.py
tests/test_bot/: test_handlers.py
tests/test_database/: test_models.py
(+3 files in other folders)
